# mocker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  asgi.py  custom_hints.example.yaml  pyproject.toml
deploy/: helmfile.yaml
deploy/mocker/: Chart.yaml
deploy/mocker/templates/: configmap-hints.yaml  configmap.yaml  deployment.yaml  ingress.yaml
deploy/values/: common.yaml  development.yaml  production.yaml  staging.yaml
src/: config.py
src/api/: app.py
src/api/public/: __init__.py
src/api/public/health/: models.py  views.py
src/api/public/mock/: crud.py  models.py  views.py
src/api/public/transparent/: views.py
src/generator/: __init__.py  builder.py  sampler.py
src/parser/: fetcher.py  models.py  parser.py  resolver.py
src/utils/: custom_hints.py  exceptions.py  generators.py  hints.py  logger.py  registry.py
tests/: conftest.py
tests/unit/api/health/: test_views.py
tests/unit/api/mock/: test_crud.py  test_sample_views.py  test_views.py
tests/unit/api/transparent/: test_transparent.py
tests/unit/generator/: test_builder.py  test_generator.py  test_sampler.py
tests/unit/parser/: test_fetcher.py  test_parser.py  test_resolver.py
tests/unit/utils/: test_custom_hints.py  test_generators.py  test_logger.py
